Add search_scope=standard_number, with tests
