# lib/resources.js
@@ -65,6 +65,9 @@ const SEARCH_SCOPES = {
   },
   callnumber: {
     fields: ['shelfMark']
+  },
+  standard_number: {
+    fields: ['shelfMark', 'identifierV2.value', 'uri', 'identifier', 'items.identifierV2.value']
   }
 }
 
@@ -501,14 +504,49 @@ const buildElasticQuery = function (params) {
   })
 
   if (params.q) {
+    // We have an array of fields to match.
+    // Seperate the root-level fields from nested fields by building an object like this:
+    //   {
+    //     _root: [ 'fieldName1', 'fieldName2' ],
+    //     nestedName1: { 'nestedName1.nestedProperty1', 'nestedName1.nestedProperty2' }
+    //   }
+    const fieldMap = SEARCH_SCOPES[params.search_scope].fields.reduce((map, fieldName) => {
+      // Most fields will be matched at root level:
+      let nestedName = '_root'
+      // Any field starting with the following is a nested field:
+      if (['items'].indexOf(fieldName.split('.').shift()) >= 0) {
+        nestedName = fieldName.split('.').shift()
+      }
+      if (!map[nestedName]) map[nestedName] = []
+      map[nestedName].push(fieldName)
+      return map
+    }, { _root: [] })
+
     shoulds.push({
       'query_string': {
-        'fields': SEARCH_SCOPES[params.search_scope].fields,
-        // default_field: defaultField,
+        'fields': fieldMap._root,
         'query': escapeQuery(params.q),
         'default_operator': 'AND'
       }
     })
+
+    // Add nested queries (if any) to things that *should* match:
+    Object.keys(fieldMap)
+      .filter((nestedName) => nestedName !== '_root')
+      .forEach((nestedName) => {
+        shoulds.push({
+          nested: {
+            path: nestedName,
+            query: {
+              query_string: {
+                fields: fieldMap[nestedName],
+                query: escapeQuery(params.q),
+                default_operator: 'AND'
+              }
+            }
+          }
+        })
+      })
   }
 
   var filterClausesWithPaths = []
